--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>demo</groupId>
     <artifactId>example-amqp</artifactId>
-    <version>0.1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>RabbitMQ Publisher and Subscriber</name>
     <description>Aggregator project for RabbitMQ Publisher and Listener</description>
